# uav-sysid

./: README.md  mav.parm  mav.tlog  mav.tlog.raw  pyproject.toml  requirements.txt
MATLAB_SITL_physics_backend/AP_send_recieve_functions/: AP_Conector_new.slx  AP_receve_new.m  AP_send_new.m
MATLAB_SITL_physics_backend/Copter/: Copter.slx
MATLAB_SITL_physics_backend/Copter/matlab_models/: SIM_multicopter.m
MATLAB_SITL_physics_backend/Copter/simulink_models/: Copter.slx  sim_service.m
MATLAB_SITL_physics_backend/Copter/slprj/_jitprj/: jitEngineAccessInfo.mat  (+39 more)
MATLAB_SITL_physics_backend/SITL_Connector/: SITL_connector.m
MATLAB_SITL_physics_backend/slprj/_jitprj/: jitEngineAccessInfo.mat  sDUmGRFCG8T0DPGsSbUG44F.mat  sWhmoDK2IpUMUZUUVEbRLFH.l  sWhmoDK2IpUMUZUUVEbRLFH.mat  snp47aPtJqqYTutyGvCj4bD.mat
docs/: SITL-MatlabPhysicsBackend_aufbauen.docx  workflow_sitl_matlab_missionplanner.md
tests/: test_matlab_backend.py  test_simulation.py  test_sysid.py
uav_sysid/: __init__.py
uav_sysid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
uav_sysid/matlab_backend/: __init__.py  engine.py  physics.py
uav_sysid/simulation/: __init__.py  flight_dynamics.py  simulator.py
uav_sysid/sysid/: __init__.py  data_loader.py  estimator.py
vehicle_simulation/: README.md
vehicle_simulation/vehicle_hexacopter_matlab/: config.json  product_launch_hexacopter.py
vehicle_simulation/vehicle_hexacopter_simulink/: config.json  product_launch_hexacopter.py
vehicle_simulation/vehicle_quadcopter/: config.example.json  product_launch_hexacopter.py
(+132 files in other folders)
