[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-sysid"
version = "0.1.0"
description = "UAV Development Tool: System Identification, Automated STIL Simulation, MATLAB Physics Backend"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uav_sysid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
